--- a/aula01/index.html
+++ b/aula01/index.html
@@ -19,6 +19,26 @@
         <img src="https://www.alura.com.br/assets/img/imersoes/dev-2021/logo-imersao-aluraflix.svg" class="page-logo"
             alt="">
     </div>
+
+    <div id="choice-options">
+
+    </div>
+
+    <div id="conversor">
+        <div id="title-conversor"></div>
+        <form id="form-conversor" onsubmit=formConversor(event)>
+            <div id="currency">
+
+            </div>
+            <button type="submit" class="button-conversor">Converter</button>
+
+        </form>
+    </div>
+
+    <div id="result">
+
+    </div>
+
     <a href="https://alura.com.br/" target="_blank">
         <img src="https://www.alura.com.br/assets/img/home/alura-logo.svg" alt="" class="alura-logo">
         <img src="https://caelum-online-public.s3.amazonaws.com/assets-imersaodev/Convers%C3%A3o+1.png">
